fixed header spacing issue

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -19,17 +19,18 @@
 
 header {
     display: grid;
-    grid-template-columns: 120px auto auto 44px;
-    align-items:end;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
     background-color: var(--primary-color);
     color: white;
-
 }
 
 header img {
     grid-column: 1 / 2;
     padding: 1rem;
 }
+
+
 
 #headerTitle h1 {
     font-size: 2.4rem;
